# Taller_1---Estructura-de-Datos

./: .gitignore  CMakeLists.txt
includes/: Alumno.h  Curso.h  NodoAlumno.h  NodoCurso.h  NodoNotas.h  Notas.h  Sistema.h
src/: Alumno.cpp  App.cpp  Curso.cpp  NodoAlumno.cpp  NodoCurso.cpp  NodoNotas.cpp  Notas.cpp  Sistema.cpp
